methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:15: error: ':' expected but ')' found.
def isFacingTrail(c):Boolean = {
                   ^SlugSnail:31: error: identifier expected but '}' found.
}
^