methods.slug.SlugSnail.scala.code
def hunt(c: Str) {
    // Write your code here
  while (estSurBiscuit == false){
    while (isFacingTrail(c) == false) {
    droite()
  	}
    avance() ; baisseBrosse() ; leveBrosse()
  }
  prendBiscuit()
}

// Copy your isFacingTrail() here

def isFacingTrail(c):Boolean = {
  if (estFaceMur() == true ){
    return false
  }
  avance()
  if (getCouleurSol == c){
    recule()
    return true
  } else {
    recule()
    return false
  }
}